--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,10 @@
-<html>
+<html lang='en'>
   <head>
-    <meta charset='utf-8' />
-    <title>Example App</title>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>VidJot by Pedro</title>
   </head>
   <body>
-
     {{{body}}}
-
   </body>
 </html>
