--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,13 @@
     />
   </head>
   <body>
-    {{{body}}}
+    <div>{{> _navbar}}</div>
+
+    <div class="container">
+      {{{body}}}
+    </div>
+
+    
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js'
       integrity='sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL'
