--- a/views/ideas/index.handlebars
+++ b/views/ideas/index.handlebars
@@ -2,11 +2,7 @@
   <div class='card card-body mb-2'>
     <h4>{{title}}</h4>
     <p>{{details}}</p>
-    <a class='btn btn-dark btn-block mb-2' href='/ideas/edit/{{id}}'>Edit</a>
-    <form method='post' action='/ideas/{{id}}?_method=DELETE'>
-      <input type='hidden' name='_method' value='DELETE' />
-      <input type='submit' class='btn btn-danger btn-block' value='Delete' />
-    </form>
+    <a class='btn btn-dark btn-block mb-2' href='/ideas/edit/{{_id}}'>Edit</a>
   </div>
 {{else}}
   <p>No video ideas listed</p>
