--- a/views/ideas/edit.handlebars
+++ b/views/ideas/edit.handlebars
@@ -1,21 +1,36 @@
 {{#each errors}}
-  <div class="alert alert-danger">{{text}}</div>
+  <div class='alert alert-danger'>{{text}}</div>
 {{else}}
 
 {{/each}}
 
-<div class="card card-body">
+<div class='card card-body'>
   <h3>Edit Video Idea</h3>
-  <form action="/ideas/{{idea.id}}?_method=PUT" method="post">
-    <input type="hidden" name="_method" value="PUT">
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input type="text" class="form-control" name="title" value="{{idea.title}}" required>
+  <!-- 
+    The following are necessary by the method-override package in order to make a PUT request:
+    1)   ?_method=PUT"
+    2)   <input type="hidden" name="_method" value="PUT">
+  -->
+  <form action='/ideas/{{idea._id}}?_method=PUT' method='post'>
+    <input type='hidden' name='_method' value='PUT' />
+    <div class='form-group'>
+      <label for='title'>Title</label>
+      <input
+        type='text'
+        class='form-control'
+        name='title'
+        value='{{idea.title}}'
+        required
+      />
     </div>
-    <div class="form-group">
-      <label for="details">Details</label>
-      <textarea class="form-control" name="details" required>{{idea.details}}</textarea>
+    <div class='form-group'>
+      <label for='details'>Details</label>
+      <textarea
+        class='form-control'
+        name='details'
+        required
+      >{{idea.details}}</textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type='submit' class='btn btn-primary'>Submit</button>
   </form>
 </div>
