--- a/views/ideas/index.handlebars
+++ b/views/ideas/index.handlebars
@@ -5,7 +5,11 @@
     <a class='btn btn-dark btn-block mb-2' href='/ideas/edit/{{_id}}'>Edit</a>
     <form method='post' action='/ideas/{{_id}}?_method=DELETE'>
       <input type='hidden' name='_method' value='DELETE' />
-      <input type='submit' class='btn btn-danger btn-block' value='Delete' />
+      <input
+        type='submit'
+        class='btn btn-danger btn-block w-100'
+        value='Delete'
+      />
     </form>
   </div>
 {{else}}
