--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,5 +34,6 @@
       integrity='sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+'
       crossorigin='anonymous'
     ></script>
+    <link rel="stylesheet" href="/css/style.css">
   </body>
 </html>
